[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/ArcadeFont.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.380392, 0.160784, 0.513726, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 464.0
margin_top = 226.0
margin_right = 560.0
margin_bottom = 374.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 28.0

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 96.0
margin_bottom = 40.0

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 96.0
margin_bottom = 52.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 96.0
margin_bottom = 84.0
text = "RESUME"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 96.0
margin_bottom = 116.0
text = "OPTIONS"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 96.0
margin_bottom = 148.0
text = "QUIT"

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
